--- a/students/soft1714080902114/app/src/main/AndroidManifest.xml
+++ b/students/soft1714080902114/app/src/main/AndroidManifest.xml
@@ -11,17 +11,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Take_photo_Activity" />
         <activity android:name=".Find_url_Activity" />
-        <activity android:name=".New_note_Activity" />
-        <activity android:name=".MyListView"></activity>
-        <activity android:name=".EditTextActivity"></activity>
+        <activity android:name=".List_View_Activity"></activity>
+        <activity android:name=".New_Note_Activity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
